--- a/views/register.ejs
+++ b/views/register.ejs
@@ -142,7 +142,8 @@
                     class="w-16 h-16 bg-emerald-600 rounded-2xl flex items-center justify-center shadow-lg shadow-emerald-500/50 mb-4">
                     <i class="fas fa-file-invoice text-white text-3xl"></i>
                 </div>
-                <h1 class="text-3xl font-bold text-slate-800">Billora<span class="text-emerald-500">Pro</span></h1>
+                <h1 class="text-3xl font-bold text-slate-800">GoodOper Bill Pro<span class="text-emerald-500">Pro</span>
+                </h1>
                 <p class="text-slate-500 mt-2">ลงทะเบียนองค์กรเพื่อเริ่มใช้งาน</p>
             </div>
 
